--- a/frontend/css/beanies.css
+++ b/frontend/css/beanies.css
@@ -82,6 +82,9 @@ body{
     margin: 0;
 }
 */
+header{
+    margin-top: 10%;
+}
 *{
     margin: 0;
     padding: 0;
@@ -108,7 +111,7 @@ body{
     position: fixed;
     padding-left: 5px;
     left: 9.8%;
-    top: -1.5%;
+    top: 12%;
     box-shadow: 0px 4px 4px 4px rgba(226, 225, 225, 0.2);
     border-radius: 4px;
 }
@@ -135,6 +138,9 @@ body{
 }
 p{
     text-decoration: none;
+}
+#beanies-data{
+    margin-top: 10%;
 }
 
 @media only screen and (max-width: 600px) {
