--- a/frontend/css/facemasks.css
+++ b/frontend/css/facemasks.css
@@ -1,3 +1,6 @@
+header{
+    margin-top: 10%;
+}
 *{
     margin: 0;
     padding: 0;
@@ -10,13 +13,12 @@
 .table-row{
     display: table;
     width: 80%;
-    margin: 10px auto;
+    margin: 0px auto;
     font-family: sans-serif;
     background: transparent;
     padding: 12px 0;
     color: #555;
     font-size: 13px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
 }
 .table-head{
     background: #8665f7;
@@ -25,7 +27,7 @@
     position: fixed;
     padding-left: 5px;
     left: 9.8%;
-    top: -1.5%;
+    top: 12%;
     box-shadow: 0px 4px 4px 4px rgba(226, 225, 225, 0.2);
     border-radius: 4px;
 }
@@ -40,7 +42,7 @@
     width: 20%;
     text-align: center;
     padding: 0;
-    border-right: 1px solid #d6d4d4;
+    border-right: 0.5px solid #d6d4d4;
     vertical-align: middle;
 }
 .first-cell{
@@ -52,6 +54,9 @@
 }
 p{
     text-decoration: none;
+}
+#facemasks-data{
+    margin-top: 10%;
 }
 
 @media only screen and (max-width: 600px) {
@@ -65,4 +70,3 @@ p{
     width: 3px;
     height: 4px;
 }
-
